--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,27 @@
-<!-- <body>
-  <div class="container_main">
-    <img src="{{ url }}" alt="image" />
-    <h1>
-      <span>{{ name }}</span>
-    </h1>
-  </div>
-</body> -->
+<!-- @for (movie of allMovies; track movie.Title) {
+<app-card title="{{ movie.Title }}" image="{{ movie.imageURL }}"></app-card> -->
 
-<app-user />
+<!-- <div class="movie-list-container">
+    @for (movie of allMovies; track $index) {
+    <app-card
+      [Title]="movie.Title"
+      [imageURL]="movie.imageURL"
+      [rating]="movie.rating"
+      [discription]="movie.discription"
+    ></app-card>
+    }
+</div> -->
+<div>
+  <div class="addbutton">
+    <button (click)="toggleAddMovie()">Add Movie</button>
+  </div>
+
+  <div>
+    @if(showAddMovie){
+    <app-addmovie [singleMovie]="movieData"></app-addmovie>
+    }
+  </div>
+</div>
+
+<app-movie-list [allMovies]="movieData" />
+<!-- <app-counter /> -->
