--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,25 +1,22 @@
-// img {
-//   border-radius: 50%;
-//   width: 300px;
-//   height: 300px;
-//   align-content: center;
+// .movie-list-container{
+//     margin: 100px;
+//     display: flex;
+//     gap: 3rem;
+//     margin: 40px 80px;
+//     justify-content: space-evenly;
 // }
-// .container_main {
-//   display: grid;
-//   grid-template-rows: 1fr 1fr;
-//   align-content: center;
-//   align-items: stretch;
-//   justify-content: center;
-//   width: 1500px;
-//   justify-items: center;
-//   text-align: center;
-// }
-// body {
-//   min-height: 100vh;
-//   align-content: center;
-//   justify-content: center;
-// }
-// span {
-//   font-weight: bold;
-//   font-style: italic;
-// }
+
+button {
+  background-color: rgb(7, 192, 249);
+  color: white;
+  width: 143px;
+  height: 55px;
+  border-radius: 10px;
+  font-size: 20px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.addbutton {
+  display: flex;
+  justify-content: flex-end;
+}
