--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,5 +1,5 @@
 <div class="movie-list-container">
   @for (movie of allMovies; track $index) {
-  <app-card [Movies]="movie" />
+  <app-card [Movies]="movie" (delete)="deleteMovie($event)" />
   }
 </div>
