--- a/src/app/movies/movies.component.scss
+++ b/src/app/movies/movies.component.scss
@@ -1,10 +1,10 @@
-.movie-list-container {
-  margin: 100px;
-  display: flex;
-  gap: 3rem;
-  margin: 40px 80px;
-  justify-content: space-evenly;
-}
+// .movie-list-container{
+//     margin: 100px;
+//     display: flex;
+//     gap: 3rem;
+//     margin: 40px 80px;
+//     justify-content: space-evenly;
+// }
 
 button {
   background-color: rgb(7, 192, 249);
