--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,8 +1,8 @@
-<!-- <body> -->
 <!-- <div *ngFor="let movie of allMovies" class="movies"> -->
 <div class="movies">
   <div class="card">
     <img src="{{ Movies.imageURL }}" alt="Avatar" />
+
     <div class="container">
       <div class="rating">
         <h4>
@@ -10,10 +10,28 @@
         </h4>
         <h3>⭐ {{ Movies.rating }}</h3>
       </div>
+
+      <div class="btn">
+        <button (click)="toggleDesMovie()">
+          {{ showDes ? "Close Description..." : "Show Description..." }}
+        </button>
+      </div>
+      @if (showDes) {
       <p>
         {{ Movies.discription }}
       </p>
+      }
+      <div class="reaction">
+        <div class="reaction1">
+          <button (click)="likeIncreament()">👍 {{ like }}</button>
+        </div>
+        <div class="reaction2">
+          <button (click)="disLikeIncreament()">👎 {{ dislike }}</button>
+        </div>
+      </div>
+      <div class="delete-button">
+        <button (click)="deleteMovie()">Delete</button>
+      </div>
     </div>
   </div>
 </div>
-<!-- </body> -->
