--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -7,12 +7,29 @@
   gap: 20px;
   overflow: hidden;
   font-family: sans-serif;
+  padding-bottom: 10px;
 }
 img {
   border-radius: 20px;
   width: 100%;
   height: 20rem;
   box-shadow: 0px 5px lightgray;
+}
+.btn {
+  display: flex;
+  justify-content: center;
+}
+.btn button {
+  align-items: center;
+  background: none;
+  border: none;
+  color: black;
+  // font-size: 20px;
+  cursor: pointer;
+}
+
+.btn button:hover {
+  color: skyblue;
 }
 
 .card:hover {
@@ -29,10 +46,44 @@ img {
   align-items: center;
 }
 
-//   body{
-//     margin: 100px;
-//     display: flex;
-//     gap: 3rem;
-//     margin: 40px 80px;
-//     justify-content: space-evenly;
-// }
+.reaction button {
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+.reaction button:hover {
+  transform: scale(1.3);
+}
+.reaction {
+  padding-top: 20px;
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+.delete-button button {
+  background: none;
+  font-size: 15px;
+  cursor: pointer;
+  border-radius: 8px;
+}
+.delete-button button:hover {
+  background-color: red;
+  color: white;
+  transform: scale(1.3);
+}
+.card:has(.delete-button button:hover) {
+  background-color: rgb(255, 0, 0);
+  color: white;
+}
+
+.delete-button {
+  padding-top: 20px;
+  padding-bottom: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
