--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,16 +1,15 @@
 <!-- @for (movie of allMovies; track movie.Title) {
 <app-card title="{{ movie.Title }}" image="{{ movie.imageURL }}"></app-card> -->
 
-<!-- <--
-<div class="movie-list-container">
-  @for (movie of allMovies; track $index) {
-  <app-card
-    [Title]="movie.Title"
-    [imageURL]="movie.imageURL"
-    [rating]="movie.rating"
-    [discription]="movie.discription"
-  ></app-card>
-  }
+<!-- <div class="movie-list-container">
+    @for (movie of allMovies; track $index) {
+    <app-card
+      [Title]="movie.Title"
+      [imageURL]="movie.imageURL"
+      [rating]="movie.rating"
+      [discription]="movie.discription"
+    ></app-card>
+    }
 </div> -->
 <div class="controls">
   <button (click)="toggle()">
@@ -40,12 +39,6 @@
   }
 
   <app-movie-list [allMovies]="movieData" />
-</div>
 
-<!-- <nav>
-  |
-  <a routerLink="/movies">movies</a>
-  |
-  <a routerLink="/color">colorgame</a>
-</nav>
-<router-outlet /> -->
+  <!-- <app-counter /> -->
+</div>
