--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,9 +12,10 @@
   ></app-card>
   }
 </div> -->
+<span class="material-symbols-outlined"> menu </span>
 <div class="controls">
   <button (click)="toggle()">
-    {{ controls ? "➖" : "➕" }}<i class="fa fa-bars"></i>
+    <span class="material-symbols-outlined"> menu </span>
   </button>
 </div>
 <div>
