--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,10 +12,15 @@
   ></app-card>
   }
 </div> -->
-<span class="material-symbols-outlined"> menu </span>
+
 <div class="controls">
-  <button (click)="toggle()">
-    <span class="material-symbols-outlined"> menu </span>
+  <button
+    (click)="toggle()"
+    mat-fab
+    aria-label=" delete icon"
+    style="color: primary"
+  >
+    <mat-icon>menu</mat-icon>
   </button>
 </div>
 <div>
