--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,6 +14,8 @@ button {
   border-radius: 10px;
   font-size: 20px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  cursor: pointer;
+  margin-bottom: 10px;
 }
 
 .addbutton {
@@ -31,12 +33,12 @@ button {
   display: flex;
   justify-content: flex-end;
 }
-.controls > button {
-  background-color: white;
-  border: none;
-  cursor: pointer;
-}
 
 .controls button {
+  color: black;
+  font-size: 20px;
   cursor: pointer;
+  background: none;
+  border: none;
+  box-shadow: none;
 }
